backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: receipt-backend
  labels:
    app: receipt-backend
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: receipt-backend
  template:
    metadata:
      labels:
        app: receipt-backend
    spec:
      containers:
      - name: flask-app
        image: harbor.test.com/test-project/python-test:184
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - mountPath: "/db"
          name: sql-db
      volumes:
      - name: sql-db
        persistentVolumeClaim:
          claimName: sqlite-db
