backend/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: receipt-backend-svc # Nginx의 default.conf에 적은 이름과 일치해야 함
spec:
  selector:
    app: receipt-backend
  ports:
  - protocol: TCP
    port: 80         # Nginx 프록시가 접속할 포트
    targetPort: 5000 # 실제 Flask가 떠 있는 포트
  type: ClusterIP
